tests/baselines/reference/jsxUnclosedParserRecovery(strict=true).errors.txt
jsxParserRecovery.tsx(10,14): error TS7026: JSX element implicitly has type 'any' because no interface 'JSX.IntrinsicElements' exists.
jsxParserRecovery.tsx(12,1): error TS1003: Identifier expected.
jsxParserRecovery.tsx(12,1): error TS7026: JSX element implicitly has type 'any' because no interface 'JSX.IntrinsicElements' exists.
jsxParserRecovery.tsx(14,14): error TS7026: JSX element implicitly has type 'any' because no interface 'JSX.IntrinsicElements' exists.
jsxParserRecovery.tsx(15,5): error TS7026: JSX element implicitly has type 'any' because no interface 'JSX.IntrinsicElements' exists.
jsxParserRecovery.tsx(16,1): error TS1003: Identifier expected.
jsxParserRecovery.tsx(16,1): error TS7026: JSX element implicitly has type 'any' because no interface 'JSX.IntrinsicElements' exists.
jsxParserRecovery.tsx(18,14): error TS7026: JSX element implicitly has type 'any' because no interface 'JSX.IntrinsicElements' exists.
jsxParserRecovery.tsx(19,5): error TS7026: JSX element implicitly has type 'any' because no interface 'JSX.IntrinsicElements' exists.
jsxParserRecovery.tsx(19,12): error TS2558: Expected 0 type arguments, but got 1.
jsxParserRecovery.tsx(20,1): error TS1003: Identifier expected.
jsxParserRecovery.tsx(20,1): error TS7026: JSX element implicitly has type 'any' because no interface 'JSX.IntrinsicElements' exists.
jsxParserRecovery.tsx(22,14): error TS7026: JSX element implicitly has type 'any' because no interface 'JSX.IntrinsicElements' exists.
jsxParserRecovery.tsx(23,5): error TS7026: JSX element implicitly has type 'any' because no interface 'JSX.IntrinsicElements' exists.
jsxParserRecovery.tsx(24,1): error TS1003: Identifier expected.
jsxParserRecovery.tsx(24,1): error TS7026: JSX element implicitly has type 'any' because no interface 'JSX.IntrinsicElements' exists.
jsxParserRecovery.tsx(26,14): error TS7026: JSX element implicitly has type 'any' because no interface 'JSX.IntrinsicElements' exists.
jsxParserRecovery.tsx(27,5): error TS7026: JSX element implicitly has type 'any' because no interface 'JSX.IntrinsicElements' exists.
jsxParserRecovery.tsx(27,12): error TS2558: Expected 0 type arguments, but got 1.
jsxParserRecovery.tsx(28,1): error TS1003: Identifier expected.
jsxParserRecovery.tsx(28,1): error TS7026: JSX element implicitly has type 'any' because no interface 'JSX.IntrinsicElements' exists.
jsxParserRecovery.tsx(30,14): error TS7026: JSX element implicitly has type 'any' because no interface 'JSX.IntrinsicElements' exists.
jsxParserRecovery.tsx(31,5): error TS7026: JSX element implicitly has type 'any' because no interface 'JSX.IntrinsicElements' exists.
jsxParserRecovery.tsx(32,1): error TS1005: '>' expected.
jsxParserRecovery.tsx(32,1): error TS7026: JSX element implicitly has type 'any' because no interface 'JSX.IntrinsicElements' exists.
jsxParserRecovery.tsx(34,14): error TS7026: JSX element implicitly has type 'any' because no interface 'JSX.IntrinsicElements' exists.
jsxParserRecovery.tsx(35,5): error TS7026: JSX element implicitly has type 'any' because no interface 'JSX.IntrinsicElements' exists.
jsxParserRecovery.tsx(35,12): error TS2558: Expected 0 type arguments, but got 1.
jsxParserRecovery.tsx(36,1): error TS1005: '>' expected.
jsxParserRecovery.tsx(36,1): error TS7026: JSX element implicitly has type 'any' because no interface 'JSX.IntrinsicElements' exists.
jsxParserRecovery.tsx(38,14): error TS7026: JSX element implicitly has type 'any' because no interface 'JSX.IntrinsicElements' exists.
jsxParserRecovery.tsx(39,5): error TS7026: JSX element implicitly has type 'any' because no interface 'JSX.IntrinsicElements' exists.
jsxParserRecovery.tsx(39,6): error TS17008: JSX element 'diddy' has no corresponding closing tag.
jsxParserRecovery.tsx(40,1): error TS7026: JSX element implicitly has type 'any' because no interface 'JSX.IntrinsicElements' exists.
jsxParserRecovery.tsx(42,14): error TS7026: JSX element implicitly has type 'any' because no interface 'JSX.IntrinsicElements' exists.
jsxParserRecovery.tsx(43,5): error TS7026: JSX element implicitly has type 'any' because no interface 'JSX.IntrinsicElements' exists.
jsxParserRecovery.tsx(43,6): error TS17008: JSX element 'diddy' has no corresponding closing tag.
jsxParserRecovery.tsx(43,12): error TS2558: Expected 0 type arguments, but got 1.
jsxParserRecovery.tsx(44,1): error TS7026: JSX element implicitly has type 'any' because no interface 'JSX.IntrinsicElements' exists.
jsxParserRecovery.tsx(47,14): error TS7026: JSX element implicitly has type 'any' because no interface 'JSX.IntrinsicElements' exists.
jsxParserRecovery.tsx(49,5): error TS1003: Identifier expected.
jsxParserRecovery.tsx(49,6): error TS2749: 'diddy' refers to a value, but is being used as a type here. Did you mean 'typeof diddy'?
jsxParserRecovery.tsx(49,11): error TS1005: '>' expected.
jsxParserRecovery.tsx(50,1): error TS7026: JSX element implicitly has type 'any' because no interface 'JSX.IntrinsicElements' exists.
jsxParserRecovery.tsx(52,14): error TS7026: JSX element implicitly has type 'any' because no interface 'JSX.IntrinsicElements' exists.
jsxParserRecovery.tsx(53,5): error TS7026: JSX element implicitly has type 'any' because no interface 'JSX.IntrinsicElements' exists.
jsxParserRecovery.tsx(54,6): error TS2558: Expected 0 type arguments, but got 1.
jsxParserRecovery.tsx(54,6): error TS2749: 'diddy' refers to a value, but is being used as a type here. Did you mean 'typeof diddy'?
jsxParserRecovery.tsx(54,11): error TS1005: '>' expected.
jsxParserRecovery.tsx(55,1): error TS7026: JSX element implicitly has type 'any' because no interface 'JSX.IntrinsicElements' exists.
jsxParserRecovery.tsx(57,14): error TS7026: JSX element implicitly has type 'any' because no interface 'JSX.IntrinsicElements' exists.
jsxParserRecovery.tsx(58,5): error TS7026: JSX element implicitly has type 'any' because no interface 'JSX.IntrinsicElements' exists.
jsxParserRecovery.tsx(58,12): error TS2558: Expected 0 type arguments, but got 1.
jsxParserRecovery.tsx(59,5): error TS1003: Identifier expected.
jsxParserRecovery.tsx(59,5): error TS7026: JSX element implicitly has type 'any' because no interface 'JSX.IntrinsicElements' exists.
jsxParserRecovery.tsx(60,1): error TS7026: JSX element implicitly has type 'any' because no interface 'JSX.IntrinsicElements' exists.
jsxParserRecovery.tsx(62,14): error TS7026: JSX element implicitly has type 'any' because no interface 'JSX.IntrinsicElements' exists.
jsxParserRecovery.tsx(63,5): error TS7026: JSX element implicitly has type 'any' because no interface 'JSX.IntrinsicElements' exists.
jsxParserRecovery.tsx(64,5): error TS1003: Identifier expected.
jsxParserRecovery.tsx(64,5): error TS7026: JSX element implicitly has type 'any' because no interface 'JSX.IntrinsicElements' exists.
jsxParserRecovery.tsx(65,1): error TS7026: JSX element implicitly has type 'any' because no interface 'JSX.IntrinsicElements' exists.
jsxParserRecovery.tsx(67,14): error TS7026: JSX element implicitly has type 'any' because no interface 'JSX.IntrinsicElements' exists.
jsxParserRecovery.tsx(68,5): error TS7026: JSX element implicitly has type 'any' because no interface 'JSX.IntrinsicElements' exists.
jsxParserRecovery.tsx(68,12): error TS2558: Expected 0 type arguments, but got 1.
jsxParserRecovery.tsx(69,5): error TS1003: Identifier expected.
jsxParserRecovery.tsx(69,5): error TS7026: JSX element implicitly has type 'any' because no interface 'JSX.IntrinsicElements' exists.
jsxParserRecovery.tsx(70,1): error TS7026: JSX element implicitly has type 'any' because no interface 'JSX.IntrinsicElements' exists.
jsxParserRecovery.tsx(72,14): error TS7026: JSX element implicitly has type 'any' because no interface 'JSX.IntrinsicElements' exists.
jsxParserRecovery.tsx(73,5): error TS7026: JSX element implicitly has type 'any' because no interface 'JSX.IntrinsicElements' exists.
jsxParserRecovery.tsx(74,5): error TS1005: '>' expected.
jsxParserRecovery.tsx(74,5): error TS7026: JSX element implicitly has type 'any' because no interface 'JSX.IntrinsicElements' exists.
jsxParserRecovery.tsx(75,1): error TS7026: JSX element implicitly has type 'any' because no interface 'JSX.IntrinsicElements' exists.
jsxParserRecovery.tsx(77,14): error TS7026: JSX element implicitly has type 'any' because no interface 'JSX.IntrinsicElements' exists.
jsxParserRecovery.tsx(78,5): error TS7026: JSX element implicitly has type 'any' because no interface 'JSX.IntrinsicElements' exists.
jsxParserRecovery.tsx(78,12): error TS2558: Expected 0 type arguments, but got 1.
jsxParserRecovery.tsx(79,5): error TS1005: '>' expected.
jsxParserRecovery.tsx(79,5): error TS7026: JSX element implicitly has type 'any' because no interface 'JSX.IntrinsicElements' exists.
jsxParserRecovery.tsx(80,1): error TS7026: JSX element implicitly has type 'any' because no interface 'JSX.IntrinsicElements' exists.
jsxParserRecovery.tsx(82,14): error TS7026: JSX element implicitly has type 'any' because no interface 'JSX.IntrinsicElements' exists.
jsxParserRecovery.tsx(83,5): error TS7026: JSX element implicitly has type 'any' because no interface 'JSX.IntrinsicElements' exists.
jsxParserRecovery.tsx(83,6): error TS17008: JSX element 'diddy' has no corresponding closing tag.
jsxParserRecovery.tsx(84,5): error TS7026: JSX element implicitly has type 'any' because no interface 'JSX.IntrinsicElements' exists.
jsxParserRecovery.tsx(85,1): error TS7026: JSX element implicitly has type 'any' because no interface 'JSX.IntrinsicElements' exists.
jsxParserRecovery.tsx(87,14): error TS7026: JSX element implicitly has type 'any' because no interface 'JSX.IntrinsicElements' exists.
jsxParserRecovery.tsx(88,5): error TS7026: JSX element implicitly has type 'any' because no interface 'JSX.IntrinsicElements' exists.
jsxParserRecovery.tsx(88,6): error TS17008: JSX element 'diddy' has no corresponding closing tag.
jsxParserRecovery.tsx(88,12): error TS2558: Expected 0 type arguments, but got 1.
jsxParserRecovery.tsx(89,5): error TS7026: JSX element implicitly has type 'any' because no interface 'JSX.IntrinsicElements' exists.
jsxParserRecovery.tsx(90,1): error TS7026: JSX element implicitly has type 'any' because no interface 'JSX.IntrinsicElements' exists.
jsxParserRecovery.tsx(93,14): error TS7026: JSX element implicitly has type 'any' because no interface 'JSX.IntrinsicElements' exists.
jsxParserRecovery.tsx(95,5): error TS2304: Cannot find name 'Cranky'.
jsxParserRecovery.tsx(96,1): error TS1003: Identifier expected.
jsxParserRecovery.tsx(96,1): error TS7026: JSX element implicitly has type 'any' because no interface 'JSX.IntrinsicElements' exists.
jsxParserRecovery.tsx(98,14): error TS7026: JSX element implicitly has type 'any' because no interface 'JSX.IntrinsicElements' exists.
jsxParserRecovery.tsx(99,5): error TS7026: JSX element implicitly has type 'any' because no interface 'JSX.IntrinsicElements' exists.
jsxParserRecovery.tsx(101,1): error TS1003: Identifier expected.
jsxParserRecovery.tsx(101,1): error TS7026: JSX element implicitly has type 'any' because no interface 'JSX.IntrinsicElements' exists.
jsxParserRecovery.tsx(103,14): error TS7026: JSX element implicitly has type 'any' because no interface 'JSX.IntrinsicElements' exists.
jsxParserRecovery.tsx(104,5): error TS7026: JSX element implicitly has type 'any' because no interface 'JSX.IntrinsicElements' exists.
jsxParserRecovery.tsx(104,12): error TS2558: Expected 0 type arguments, but got 1.
jsxParserRecovery.tsx(106,1): error TS1003: Identifier expected.
jsxParserRecovery.tsx(106,1): error TS7026: JSX element implicitly has type 'any' because no interface 'JSX.IntrinsicElements' exists.
jsxParserRecovery.tsx(108,14): error TS7026: JSX element implicitly has type 'any' because no interface 'JSX.IntrinsicElements' exists.
jsxParserRecovery.tsx(109,5): error TS7026: JSX element implicitly has type 'any' because no interface 'JSX.IntrinsicElements' exists.
jsxParserRecovery.tsx(111,1): error TS1003: Identifier expected.
jsxParserRecovery.tsx(111,1): error TS7026: JSX element implicitly has type 'any' because no interface 'JSX.IntrinsicElements' exists.
jsxParserRecovery.tsx(113,14): error TS7026: JSX element implicitly has type 'any' because no interface 'JSX.IntrinsicElements' exists.
jsxParserRecovery.tsx(114,5): error TS7026: JSX element implicitly has type 'any' because no interface 'JSX.IntrinsicElements' exists.
jsxParserRecovery.tsx(114,12): error TS2558: Expected 0 type arguments, but got 1.
jsxParserRecovery.tsx(116,1): error TS1003: Identifier expected.
jsxParserRecovery.tsx(116,1): error TS7026: JSX element implicitly has type 'any' because no interface 'JSX.IntrinsicElements' exists.
jsxParserRecovery.tsx(118,14): error TS7026: JSX element implicitly has type 'any' because no interface 'JSX.IntrinsicElements' exists.
jsxParserRecovery.tsx(119,5): error TS7026: JSX element implicitly has type 'any' because no interface 'JSX.IntrinsicElements' exists.
jsxParserRecovery.tsx(120,5): error TS1005: '>' expected.
jsxParserRecovery.tsx(121,1): error TS7026: JSX element implicitly has type 'any' because no interface 'JSX.IntrinsicElements' exists.
jsxParserRecovery.tsx(123,14): error TS7026: JSX element implicitly has type 'any' because no interface 'JSX.IntrinsicElements' exists.
jsxParserRecovery.tsx(124,5): error TS7026: JSX element implicitly has type 'any' because no interface 'JSX.IntrinsicElements' exists.
jsxParserRecovery.tsx(124,12): error TS2558: Expected 0 type arguments, but got 1.
jsxParserRecovery.tsx(125,5): error TS1005: '>' expected.
jsxParserRecovery.tsx(126,1): error TS7026: JSX element implicitly has type 'any' because no interface 'JSX.IntrinsicElements' exists.
jsxParserRecovery.tsx(128,14): error TS7026: JSX element implicitly has type 'any' because no interface 'JSX.IntrinsicElements' exists.
jsxParserRecovery.tsx(129,5): error TS7026: JSX element implicitly has type 'any' because no interface 'JSX.IntrinsicElements' exists.
jsxParserRecovery.tsx(129,6): error TS17008: JSX element 'diddy' has no corresponding closing tag.
jsxParserRecovery.tsx(131,1): error TS7026: JSX element implicitly has type 'any' because no interface 'JSX.IntrinsicElements' exists.
jsxParserRecovery.tsx(133,14): error TS7026: JSX element implicitly has type 'any' because no interface 'JSX.IntrinsicElements' exists.
jsxParserRecovery.tsx(134,5): error TS7026: JSX element implicitly has type 'any' because no interface 'JSX.IntrinsicElements' exists.
jsxParserRecovery.tsx(134,6): error TS17008: JSX element 'diddy' has no corresponding closing tag.
jsxParserRecovery.tsx(134,12): error TS2558: Expected 0 type arguments, but got 1.
jsxParserRecovery.tsx(136,1): error TS7026: JSX element implicitly has type 'any' because no interface 'JSX.IntrinsicElements' exists.


==== jsxParserRecovery.tsx (129 errors) ====
    // should have no errors here; all these functions should parse and resolve
    noName(); noClose(); noCloseTypeArg(); noCloseAttrs(); noCloseTypeArgAttrs(); noCloseBracket(); noCloseBracketTypeArgAttrs(); noSelfclose(); noSelfcloseTypeArgAttrs();
    noNameTrailingTag(); noCloseTrailingTag(); noCloseTypeArgTrailingTag(); noCloseAttrsTrailingTag(); noCloseTypeArgAttrsTrailingTag(); noCloseBracketTrailingTag(); noCloseBracketTypeArgAttrsTrailingTag(); // noSelfcloseTrailingTag(); noSelfcloseTypeArgAttrsTrailingTag();
    noNameTrailingText(); noCloseTrailingText(); noCloseTypeArgTrailingText(); noCloseAttrsTrailingText(); noCloseTypeArgAttrsTrailingText(); noCloseBracketTrailingText(); noCloseBracketTypeArgAttrsTrailingText(); // noSelfcloseTrailingText(); noSelfcloseTypeArgAttrsTrailingText();
    
    function diddy() {
        return null;
    }
    
    var donkey = <div>
                 ~~~~~
!!! error TS7026: JSX element implicitly has type 'any' because no interface 'JSX.IntrinsicElements' exists.
        <
    </div>;
    ~~
!!! error TS1003: Identifier expected.
    ~~~~~~
!!! error TS7026: JSX element implicitly has type 'any' because no interface 'JSX.IntrinsicElements' exists.
    function noName() { }
    var donkey = <div>
                 ~~~~~
!!! error TS7026: JSX element implicitly has type 'any' because no interface 'JSX.IntrinsicElements' exists.
        <diddy
        ~~~~~~
!!! error TS7026: JSX element implicitly has type 'any' because no interface 'JSX.IntrinsicElements' exists.
    </div>;
    ~~
!!! error TS1003: Identifier expected.
    ~~~~~~
!!! error TS7026: JSX element implicitly has type 'any' because no interface 'JSX.IntrinsicElements' exists.
    function noClose() { }
    var donkey = <div>
                 ~~~~~
!!! error TS7026: JSX element implicitly has type 'any' because no interface 'JSX.IntrinsicElements' exists.
        <diddy<boolean>
        ~~~~~~~~~~~~~~~
!!! error TS7026: JSX element implicitly has type 'any' because no interface 'JSX.IntrinsicElements' exists.
               ~~~~~~~
!!! error TS2558: Expected 0 type arguments, but got 1.
    </div>;
    ~~
!!! error TS1003: Identifier expected.
    ~~~~~~
!!! error TS7026: JSX element implicitly has type 'any' because no interface 'JSX.IntrinsicElements' exists.
    function noCloseTypeArg() { }
    var donkey = <div>
                 ~~~~~
!!! error TS7026: JSX element implicitly has type 'any' because no interface 'JSX.IntrinsicElements' exists.
        <diddy bananas="please"
        ~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS7026: JSX element implicitly has type 'any' because no interface 'JSX.IntrinsicElements' exists.
    </div>;
    ~~
!!! error TS1003: Identifier expected.
    ~~~~~~
!!! error TS7026: JSX element implicitly has type 'any' because no interface 'JSX.IntrinsicElements' exists.
    function noCloseAttrs() { }
    var donkey = <div>
                 ~~~~~
!!! error TS7026: JSX element implicitly has type 'any' because no interface 'JSX.IntrinsicElements' exists.
        <diddy<boolean> bananas="please"
        ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS7026: JSX element implicitly has type 'any' because no interface 'JSX.IntrinsicElements' exists.
               ~~~~~~~
!!! error TS2558: Expected 0 type arguments, but got 1.
    </div>;
    ~~
!!! error TS1003: Identifier expected.
    ~~~~~~
!!! error TS7026: JSX element implicitly has type 'any' because no interface 'JSX.IntrinsicElements' exists.
    function noCloseTypeArgAttrs() { }
    var donkey = <div>
                 ~~~~~
!!! error TS7026: JSX element implicitly has type 'any' because no interface 'JSX.IntrinsicElements' exists.
        <diddy/
        ~~~~~~~
!!! error TS7026: JSX element implicitly has type 'any' because no interface 'JSX.IntrinsicElements' exists.
    </div>;
    ~~
!!! error TS1005: '>' expected.
    ~~~~~~
!!! error TS7026: JSX element implicitly has type 'any' because no interface 'JSX.IntrinsicElements' exists.
    function noCloseBracket() { }
    var donkey = <div>
                 ~~~~~
!!! error TS7026: JSX element implicitly has type 'any' because no interface 'JSX.IntrinsicElements' exists.
        <diddy<boolean> bananas="please"/
        ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS7026: JSX element implicitly has type 'any' because no interface 'JSX.IntrinsicElements' exists.
               ~~~~~~~
!!! error TS2558: Expected 0 type arguments, but got 1.
    </div>;
    ~~
!!! error TS1005: '>' expected.
    ~~~~~~
!!! error TS7026: JSX element implicitly has type 'any' because no interface 'JSX.IntrinsicElements' exists.
    function noCloseBracketTypeArgAttrs() { }
    var donkey = <div>
                 ~~~~~
!!! error TS7026: JSX element implicitly has type 'any' because no interface 'JSX.IntrinsicElements' exists.
        <diddy>
        ~~~~~~~
!!! error TS7026: JSX element implicitly has type 'any' because no interface 'JSX.IntrinsicElements' exists.
         ~~~~~
!!! error TS17008: JSX element 'diddy' has no corresponding closing tag.
    </div>;
    ~~~~~~
!!! error TS7026: JSX element implicitly has type 'any' because no interface 'JSX.IntrinsicElements' exists.
    function noSelfclose() { }
    var donkey = <div>
                 ~~~~~
!!! error TS7026: JSX element implicitly has type 'any' because no interface 'JSX.IntrinsicElements' exists.
        <diddy<boolean> bananas="please">
        ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS7026: JSX element implicitly has type 'any' because no interface 'JSX.IntrinsicElements' exists.
         ~~~~~
!!! error TS17008: JSX element 'diddy' has no corresponding closing tag.
               ~~~~~~~
!!! error TS2558: Expected 0 type arguments, but got 1.
    </div>;
    ~~~~~~
!!! error TS7026: JSX element implicitly has type 'any' because no interface 'JSX.IntrinsicElements' exists.
    function noSelfcloseTypeArgAttrs() { }
    
    var donkey = <div>
                 ~~~~~
!!! error TS7026: JSX element implicitly has type 'any' because no interface 'JSX.IntrinsicElements' exists.
        <
        <diddy/>
        ~
!!! error TS1003: Identifier expected.
         ~~~~~
!!! error TS2749: 'diddy' refers to a value, but is being used as a type here. Did you mean 'typeof diddy'?
              ~
!!! error TS1005: '>' expected.
    </div>;
    ~~~~~~
!!! error TS7026: JSX element implicitly has type 'any' because no interface 'JSX.IntrinsicElements' exists.
    function noNameTrailingTag() { }
    var donkey = <div>
                 ~~~~~
!!! error TS7026: JSX element implicitly has type 'any' because no interface 'JSX.IntrinsicElements' exists.
        <diddy
        ~~~~~~
        <diddy/>
    ~~~~~~~~~~~~
!!! error TS7026: JSX element implicitly has type 'any' because no interface 'JSX.IntrinsicElements' exists.
         ~~~~~
!!! error TS2558: Expected 0 type arguments, but got 1.
         ~~~~~
!!! error TS2749: 'diddy' refers to a value, but is being used as a type here. Did you mean 'typeof diddy'?
              ~
!!! error TS1005: '>' expected.
    </div>;
    ~~~~~~
!!! error TS7026: JSX element implicitly has type 'any' because no interface 'JSX.IntrinsicElements' exists.
    function noCloseTrailingTag() { }
    var donkey = <div>
                 ~~~~~
!!! error TS7026: JSX element implicitly has type 'any' because no interface 'JSX.IntrinsicElements' exists.
        <diddy<boolean>
        ~~~~~~~~~~~~~~~
!!! error TS7026: JSX element implicitly has type 'any' because no interface 'JSX.IntrinsicElements' exists.
               ~~~~~~~
!!! error TS2558: Expected 0 type arguments, but got 1.
        <diddy/>
        ~
!!! error TS1003: Identifier expected.
        ~~~~~~~~
!!! error TS7026: JSX element implicitly has type 'any' because no interface 'JSX.IntrinsicElements' exists.
    </div>;
    ~~~~~~
!!! error TS7026: JSX element implicitly has type 'any' because no interface 'JSX.IntrinsicElements' exists.
    function noCloseTypeArgTrailingTag() { }
    var donkey = <div>
                 ~~~~~
!!! error TS7026: JSX element implicitly has type 'any' because no interface 'JSX.IntrinsicElements' exists.
        <diddy bananas="please"
        ~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS7026: JSX element implicitly has type 'any' because no interface 'JSX.IntrinsicElements' exists.
        <diddy/>
        ~
!!! error TS1003: Identifier expected.
        ~~~~~~~~
!!! error TS7026: JSX element implicitly has type 'any' because no interface 'JSX.IntrinsicElements' exists.
    </div>;
    ~~~~~~
!!! error TS7026: JSX element implicitly has type 'any' because no interface 'JSX.IntrinsicElements' exists.
    function noCloseAttrsTrailingTag() { }
    var donkey = <div>
                 ~~~~~
!!! error TS7026: JSX element implicitly has type 'any' because no interface 'JSX.IntrinsicElements' exists.
        <diddy<boolean> bananas="please"
        ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS7026: JSX element implicitly has type 'any' because no interface 'JSX.IntrinsicElements' exists.
               ~~~~~~~
!!! error TS2558: Expected 0 type arguments, but got 1.
        <diddy/>
        ~
!!! error TS1003: Identifier expected.
        ~~~~~~~~
!!! error TS7026: JSX element implicitly has type 'any' because no interface 'JSX.IntrinsicElements' exists.
    </div>;
    ~~~~~~
!!! error TS7026: JSX element implicitly has type 'any' because no interface 'JSX.IntrinsicElements' exists.
    function noCloseTypeArgAttrsTrailingTag() { }
    var donkey = <div>
                 ~~~~~
!!! error TS7026: JSX element implicitly has type 'any' because no interface 'JSX.IntrinsicElements' exists.
        <diddy/
        ~~~~~~~
!!! error TS7026: JSX element implicitly has type 'any' because no interface 'JSX.IntrinsicElements' exists.
        <diddy/>
        ~
!!! error TS1005: '>' expected.
        ~~~~~~~~
!!! error TS7026: JSX element implicitly has type 'any' because no interface 'JSX.IntrinsicElements' exists.
    </div>;
    ~~~~~~
!!! error TS7026: JSX element implicitly has type 'any' because no interface 'JSX.IntrinsicElements' exists.
    function noCloseBracketTrailingTag() { }
    var donkey = <div>
                 ~~~~~
!!! error TS7026: JSX element implicitly has type 'any' because no interface 'JSX.IntrinsicElements' exists.
        <diddy<boolean> bananas="please"/
        ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS7026: JSX element implicitly has type 'any' because no interface 'JSX.IntrinsicElements' exists.
               ~~~~~~~
!!! error TS2558: Expected 0 type arguments, but got 1.
        <diddy/>
        ~
!!! error TS1005: '>' expected.
        ~~~~~~~~
!!! error TS7026: JSX element implicitly has type 'any' because no interface 'JSX.IntrinsicElements' exists.
    </div>;
    ~~~~~~
!!! error TS7026: JSX element implicitly has type 'any' because no interface 'JSX.IntrinsicElements' exists.
    function noCloseBracketTypeArgAttrsTrailingTag() { }
    var donkey = <div>
                 ~~~~~
!!! error TS7026: JSX element implicitly has type 'any' because no interface 'JSX.IntrinsicElements' exists.
        <diddy>
        ~~~~~~~
!!! error TS7026: JSX element implicitly has type 'any' because no interface 'JSX.IntrinsicElements' exists.
         ~~~~~
!!! error TS17008: JSX element 'diddy' has no corresponding closing tag.
        <diddy/>
        ~~~~~~~~
!!! error TS7026: JSX element implicitly has type 'any' because no interface 'JSX.IntrinsicElements' exists.
    </div>;
    ~~~~~~
!!! error TS7026: JSX element implicitly has type 'any' because no interface 'JSX.IntrinsicElements' exists.
    function noSelfcloseTrailingTag() { }
    var donkey = <div>
                 ~~~~~
!!! error TS7026: JSX element implicitly has type 'any' because no interface 'JSX.IntrinsicElements' exists.
        <diddy<boolean> bananas="please">
        ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS7026: JSX element implicitly has type 'any' because no interface 'JSX.IntrinsicElements' exists.
         ~~~~~
!!! error TS17008: JSX element 'diddy' has no corresponding closing tag.
               ~~~~~~~
!!! error TS2558: Expected 0 type arguments, but got 1.
        <diddy/>
        ~~~~~~~~
!!! error TS7026: JSX element implicitly has type 'any' because no interface 'JSX.IntrinsicElements' exists.
    </div>;
    ~~~~~~
!!! error TS7026: JSX element implicitly has type 'any' because no interface 'JSX.IntrinsicElements' exists.
    function noSelfcloseTypeArgAttrsTrailingTag() { }
    
    var donkey = <div>
                 ~~~~~
!!! error TS7026: JSX element implicitly has type 'any' because no interface 'JSX.IntrinsicElements' exists.
        <
        Cranky Wrinkly Funky
        ~~~~~~
!!! error TS2304: Cannot find name 'Cranky'.
    </div>;
    ~~
!!! error TS1003: Identifier expected.
    ~~~~~~
!!! error TS7026: JSX element implicitly has type 'any' because no interface 'JSX.IntrinsicElements' exists.
    function noNameTrailingText() { }
    var donkey = <div>
                 ~~~~~
!!! error TS7026: JSX element implicitly has type 'any' because no interface 'JSX.IntrinsicElements' exists.
        <diddy
        ~~~~~~
        Cranky Wrinkly Funky
    ~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS7026: JSX element implicitly has type 'any' because no interface 'JSX.IntrinsicElements' exists.
    </div>;
    ~~
!!! error TS1003: Identifier expected.
    ~~~~~~
!!! error TS7026: JSX element implicitly has type 'any' because no interface 'JSX.IntrinsicElements' exists.
    function noCloseTrailingText() { }
    var donkey = <div>
                 ~~~~~
!!! error TS7026: JSX element implicitly has type 'any' because no interface 'JSX.IntrinsicElements' exists.
        <diddy<boolean>
        ~~~~~~~~~~~~~~~
               ~~~~~~~
!!! error TS2558: Expected 0 type arguments, but got 1.
        Cranky Wrinkly Funky
    ~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS7026: JSX element implicitly has type 'any' because no interface 'JSX.IntrinsicElements' exists.
    </div>;
    ~~
!!! error TS1003: Identifier expected.
    ~~~~~~
!!! error TS7026: JSX element implicitly has type 'any' because no interface 'JSX.IntrinsicElements' exists.
    function noCloseTypeArgTrailingText() { }
    var donkey = <div>
                 ~~~~~
!!! error TS7026: JSX element implicitly has type 'any' because no interface 'JSX.IntrinsicElements' exists.
        <diddy bananas="please"
        ~~~~~~~~~~~~~~~~~~~~~~~
        Cranky Wrinkly Funky
    ~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS7026: JSX element implicitly has type 'any' because no interface 'JSX.IntrinsicElements' exists.
    </div>;
    ~~
!!! error TS1003: Identifier expected.
    ~~~~~~
!!! error TS7026: JSX element implicitly has type 'any' because no interface 'JSX.IntrinsicElements' exists.
    function noCloseAttrsTrailingText() { }
    var donkey = <div>
                 ~~~~~
!!! error TS7026: JSX element implicitly has type 'any' because no interface 'JSX.IntrinsicElements' exists.
        <diddy<boolean> bananas="please"
        ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
               ~~~~~~~
!!! error TS2558: Expected 0 type arguments, but got 1.
        Cranky Wrinkly Funky
    ~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS7026: JSX element implicitly has type 'any' because no interface 'JSX.IntrinsicElements' exists.
    </div>;
    ~~
!!! error TS1003: Identifier expected.
    ~~~~~~
!!! error TS7026: JSX element implicitly has type 'any' because no interface 'JSX.IntrinsicElements' exists.
    function noCloseTypeArgAttrsTrailingText() { }
    var donkey = <div>
                 ~~~~~
!!! error TS7026: JSX element implicitly has type 'any' because no interface 'JSX.IntrinsicElements' exists.
        <diddy/
        ~~~~~~~
!!! error TS7026: JSX element implicitly has type 'any' because no interface 'JSX.IntrinsicElements' exists.
        Cranky Wrinkly Funky
        ~~~~~~
!!! error TS1005: '>' expected.
    </div>;
    ~~~~~~
!!! error TS7026: JSX element implicitly has type 'any' because no interface 'JSX.IntrinsicElements' exists.
    function noCloseBracketTrailingText() { }
    var donkey = <div>
                 ~~~~~
!!! error TS7026: JSX element implicitly has type 'any' because no interface 'JSX.IntrinsicElements' exists.
        <diddy<boolean> bananas="please"/
        ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS7026: JSX element implicitly has type 'any' because no interface 'JSX.IntrinsicElements' exists.
               ~~~~~~~
!!! error TS2558: Expected 0 type arguments, but got 1.
        Cranky Wrinkly Funky
        ~~~~~~
!!! error TS1005: '>' expected.
    </div>;
    ~~~~~~
!!! error TS7026: JSX element implicitly has type 'any' because no interface 'JSX.IntrinsicElements' exists.
    function noCloseBracketTypeArgAttrsTrailingText() { }
    var donkey = <div>
                 ~~~~~
!!! error TS7026: JSX element implicitly has type 'any' because no interface 'JSX.IntrinsicElements' exists.
        <diddy>
        ~~~~~~~
!!! error TS7026: JSX element implicitly has type 'any' because no interface 'JSX.IntrinsicElements' exists.
         ~~~~~
!!! error TS17008: JSX element 'diddy' has no corresponding closing tag.
        Cranky Wrinkly Funky
    </div>;
    ~~~~~~
!!! error TS7026: JSX element implicitly has type 'any' because no interface 'JSX.IntrinsicElements' exists.
    function noSelfcloseTrailingText() { }
    var donkey = <div>
                 ~~~~~
!!! error TS7026: JSX element implicitly has type 'any' because no interface 'JSX.IntrinsicElements' exists.
        <diddy<boolean> bananas="please">
        ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS7026: JSX element implicitly has type 'any' because no interface 'JSX.IntrinsicElements' exists.
         ~~~~~
!!! error TS17008: JSX element 'diddy' has no corresponding closing tag.
               ~~~~~~~
!!! error TS2558: Expected 0 type arguments, but got 1.
        Cranky Wrinkly Funky
    </div>;
    ~~~~~~
!!! error TS7026: JSX element implicitly has type 'any' because no interface 'JSX.IntrinsicElements' exists.
    function noSelfcloseTypeArgAttrsTrailingText() { }
    